[project]
name = "stockseer-ai"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.32.0",
    "yfinance>=0.2.37",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.1.0",
    "ta>=0.10.2",
    "plotly>=5.18.0",
    "joblib>=1.3.2",
]